Updated responsiveness and fixed layout issues

--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ span {
     position: relative;
     display: inline-block;
     align-items: center;
-
 }
 
 .text-animation span {
@@ -179,28 +178,16 @@ span {
     overflow: hidden;
     white-space: nowrap;
     border-right: 3px solid var(--main-color);
-    /* Blinking cursor effect */
-    width: 0;
-    /* Start with zero width */
-    animation: typing 3s steps(20, end) forwards, blink 1s step-end infinite;
+    animation: blink 1s step-end infinite;
 }
 
-/* Typing Effect */
-@keyframes typing {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 78%;
-    }
-}
-
+/* Blinking Cursor Effect */
 @keyframes blink {
-    60% {
+    50% {
         border-color: transparent;
     }
 }
+
 
 /* About Section */
 .about {
